# todo-rust

./: README.md
backend/: .env  Cargo.toml  Makefile.toml  compose.yml  sqlx-data.json
backend/src/: db_pool.rs  main.rs  page.rs
backend/src/todo/: mod.rs  models.rs
backend/src/todo/controllers/: add.rs  delete.rs  list.rs  mod.rs  toggle.rs
