[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
derive_more = "0.99.17"
env_logger = "0.9.0"
ormx = { version = "0.10.0", features = ["postgres"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres", "uuid", "offline"] }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
